--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "discord.js": "^11.4.2",
     "ffmpeg-binaries": "^4.0.0",
     "node-opus": "^0.3.1",
+    "youtube-search": "^1.1.4",
     "ytdl-core": "^0.28.0"
   }
 }
